--- a/container-optimizer/backend/Dockerfile
+++ b/container-optimizer/backend/Dockerfile
@@ -1,4 +1,26 @@
-FROM node:14
-ENV AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
-USER root
-CMD ["node", "app.js"]
+FROM python:3.12-slim
+
+# Install dependencies and Trivy for security scanning
+RUN apt-get update && apt-get install -y wget gnupg curl && \
+    wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor -o /usr/share/keyrings/trivy.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | tee /etc/apt/sources.list.d/trivy.list && \
+    apt-get update && apt-get install -y trivy && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+# Install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
+COPY . .
+
+# Set environment variables
+ENV HOST=0.0.0.0
+ENV PORT=8000
+
+EXPOSE 8000
+
+# Start the application
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
