docs: finalize cross-account PR workflow with workflow_dispatch

--- a/container-optimizer/.github/workflows/container-optimize-ci.yml
+++ b/container-optimizer/.github/workflows/container-optimize-ci.yml
@@ -2,7 +2,8 @@ name: Build Docker Image (Cross-Account PR)
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
+  workflow_dispatch:
 
 # --- MANDATORY PERMISSIONS ---
 permissions:
